--- a/geekshop/mainapp/templates/mainapp/products.html
+++ b/geekshop/mainapp/templates/mainapp/products.html
@@ -7,8 +7,8 @@
 	<div class="details">
 			<div class="links clearfix">
 				<ul class="links-menu">
-					{% for item in product_list %}
-						<li><a href="#">{{ item }}</a></li>
+					{% for item in category %}
+						<li><a href="#">{{ item.name }}</a></li>
 					{% endfor %}
 				</ul>
 			</div>
